--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.1",
+    "cookies-next": "^2.1.1",
     "eslint": "8.22.0",
+    "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^12.3.0",
+    "react-hook-form": "^7.35.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.1.1",
-    "@svgr/webpack": "^6.3.1"
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "dev": "next dev",
