--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookies-next": "^2.1.1",
     "eslint": "8.22.0",
     "next": "^12.3.0",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.5"
   }
 }
