--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
+    "reoverlay": "^1.0.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
