--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.23.1",
     "cookies-next": "^2.1.1",
     "eslint": "8.22.0",
+    "hangul-js": "^0.2.6",
     "next": "^12.3.0",
     "next-plugin-antd-less": "^1.8.0",
     "react": "^18.2.0",
