--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.1",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.5",
     "eslint": "8.22.0",
     "hangul-js": "^0.2.6",
+    "moment": "^2.29.4",
     "next": "^12.3.0",
     "next-plugin-antd-less": "^1.8.0",
+    "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
+    "react-quill": "^2.0.0",
     "reoverlay": "^1.0.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
